# lang-interpreter-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
lang-interpreter-macros/: .gitignore  Cargo.toml
lang-interpreter-macros/src/: lib.rs  util.rs
src/: interpreter.rs  lexer.rs  lib.rs  macros.rs  parser.rs  regex_patterns.rs  terminal_io.rs  utils.rs
src/interpreter/: conversions.rs  data.rs  lang_test.rs  lang_vars.rs  lii.rs  module.rs  module_manager.rs  operators.rs  platform.rs  predefined_functions.rs  regex.rs
src/interpreter/data/: function.rs  object.rs
src/interpreter/data/function/: native.rs
src/interpreter/platform/: wasm.rs
src/interpreter/predefined_functions/: array_functions.rs  byte_buffer_functions.rs  combinator_functions.rs  conversion_functions.rs  error_functions.rs  func_ptr_functions.rs  io_functions.rs  lang_functions.rs  lang_test_functions.rs  linker_functions.rs  list_functions.rs  math_functions.rs  module_functions.rs  number_functions.rs  operation_functions.rs  reset_functions.rs  struct_functions.rs  system_functions.rs  text_functions.rs
src/lexer/: code_position.rs  tests.rs  token.rs
src/parser/: ast.rs  tests.rs
src/parser/ast/: node.rs
src/terminal_io/: custom_logging.rs
src/terminal_io/custom_logging/: wasm.rs
src/utils/math/: tests.rs
tests/: lexer.rs  parser.rs
tests/interpreter/: main.rs
