[workspace]
members = ["lang-interpreter-macros"]

[package]
name = "lang-interpreter"
version = "0.0.6-dev"
edition = "2021"
authors = ["JDDev0 <jddev0@dorneger.at>"]
description = "A rust reimplementation of the Standard Lang interpreter"
repository = "https://github.com/lang-programming/lang-interpreter-rs"
license = "MIT"
readme = "README.md"
keywords = ["lang", "lang-interpreter"]
categories = ["compilers"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
lang-interpreter-macros = { version = "0.2.1", path = "lang-interpreter-macros" }
include_dir = "0.7.4"
regex = "1.11.1"
chrono = "0.4.39"
rand = { version = "0.8.5", features = ["small_rng"] }
ahash = "0.8.11"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
gc = { version = "0.5.0", features = ["derive"] }
