[workspace]
members = ["lang-interpreter-macros"]

[package]
name = "lang-interpreter"
version = "0.0.8"
edition = "2024"
authors = ["JDDev0 <jddev0@dorneger.at>"]
description = "A rust reimplementation of the Standard Lang interpreter"
repository = "https://github.com/lang-programming/lang-interpreter-rs"
license = "MIT"
readme = "README.md"
keywords = ["lang", "lang-interpreter"]
categories = ["compilers"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
lang-interpreter-macros = { version = "0.3.0", path = "lang-interpreter-macros" }
include_dir = "0.7.4"
regex = "1.11.1"
chrono = "0.4.39"
rand = { version = "0.8.5", features = ["small_rng"] }
ahash = "0.8.11"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
gc = { version = "0.5.0", features = ["derive"] }

# "getrandom" is required for "ahash" but will not work on WASM without enabling the "js" flag
# For building to WASM, the "js" flag must be enabled here
getrandom = { version = "0.2.15", optional = true, features = ["js"] }
web-time = { version = "1.1.0", optional = true }
web-sys = { version = "0.3.77", optional = true }

[features]
custom-logging = []
wasm = [
    "dep:getrandom",

    "dep:web-time",

    "dep:web-sys",
    "web-sys/console",
]
wasm-platform-api = [
    "wasm",

    "web-sys/Url",
    "web-sys/WorkerLocation",
    "web-sys/XmlHttpRequest",
    "web-sys/XmlHttpRequestResponseType",
]
